--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "mongoose": "^9.1.3",
     "nodemon": "^3.1.11"
   }
 }
