--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongoose": "^9.1.3",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "openai": "^6.16.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.0.0",
+    "@types/express": "^4.17.21"
   }
 }
